--- a/src/components/eventcalendar/CalendarGrid.scss
+++ b/src/components/eventcalendar/CalendarGrid.scss
@@ -425,3 +425,136 @@ button {
 
   
 }
+
+///
+/// 
+/// daily view
+/// 
+///
+.daily-calendar-grid {
+  display: flex;
+  flex-direction: row;
+  width: var(--width, 100%);
+  min-width: 500px;
+  color: var(--calendar-controls-color, #3c4655);
+  border-right: var(--day-header-border-right, 0.3px solid #d6d6d6);
+  border-bottom: var(--day-header-border-right, 0.3px solid #d6d6d6);
+  .daily-calendar-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .daily-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+  
+  .daily-appointments {
+    flex: 0 0 65%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .calendar-pick {
+    flex: 0 0 35%; /* Adjust flex-basis to 25% for smaller width */
+    max-width: 430px; /* Set a maximum width for the element */
+    height: 600px; /* Adjust height as needed */
+    display: flex;
+    flex-direction: column;
+    overflow: hidden; /* Hide overflow content */
+  }
+
+  .time-header {
+    flex: 0 0 2rem;
+    border-right: var(--day-header-border-right, 0.3px solid #d6d6d6);
+    border-left: var(--day-header-border-right, 0.3px solid #d6d6d6);
+    border-bottom: var(--day-header-border-right, 0.3px solid #d6d6d6);
+  }
+
+  .day-header-daily {
+    width: var(--day-header-width, 100%);
+    text-align: center;
+    font-weight: 600;
+    border-top: var(--day-header-border-top, 0, 3px solid #d6d6d6);
+    border-bottom: var(--day-header-border-top, 0.3px solid #d6d6d6);
+    border-right: var(--day-header-border-right, 0.3px solid #d6d6d6);
+    border-left: var(--day-header-border-right, 0.3px solid #d6d6d6);
+    padding: var(--day-header-padding, 1rem 0rem);
+    box-sizing: border-box;
+    background-color: var(--day-header-bg, #ffffff);
+
+    &:first-child {
+      border-left: none;
+    }
+  }
+
+  .week-row {
+    display: flex;
+    flex-direction: row;
+    /* Arrange rows horizontally */
+    width: 100%;
+  }
+
+  .hour-column {
+    flex: 0 0 4rem;
+    /* Fixed width for time column */
+    display: flex;
+    flex-direction: column;
+    /* Arrange hours vertically */
+  }
+
+  .hour-cell {
+    flex: 0 0 3.4rem;
+    /* Adjust height for each hour cell */
+    display: flex;
+    align-items: top;
+    justify-content: center;
+    padding: 0 0;
+    /* Ajuste de padding a cero */
+    border-right: 0.3px solid #d6d6d6;
+    border-left: 0.3px solid #d6d6d6;
+    background-color: var(--day-header-bg, #ffffff);
+    box-sizing: border-box;
+
+    span {
+
+      color: var(--day-header-color, #6a727f);
+      transform: translateY(-10px);
+      font-size: var(--month-title-size, 0.8rem);
+      font-weight: bold;
+      /* Mueve el texto hacia arriba 5px */
+    }
+  }
+
+  .hour-cell:first-child {
+    padding-top: 0rem;
+    /* Add desired top padding to the first hour cell */
+    border-bottom: 0.3px solid #d6d6d6;
+  }
+
+  .hour-cell:last-child {
+    padding-top: 0rem;
+    /* Add desired top padding to the first hour cell */
+    border-bottom: 0.3px solid #d6d6d6;
+  }
+
+  .day-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .day-hour-cell,
+  .half-hour-cell {
+    flex: 0 0 3.4rem;
+    /* Altura uniforme para 30 minutos */
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border: 0.3px solid #d6d6d6;
+    box-sizing: border-box;
+  }
+
+  
+}
