--- a/src/components/availabilityview/DailyAppointments.scss
+++ b/src/components/availabilityview/DailyAppointments.scss
@@ -30,39 +30,53 @@
   cursor: not-allowed;
 }
 
-
-.profile-header {
+.profile--header {
   display: flex;
-  align-items: center;
-  padding: 2rem;
+  flex-direction: column; /* Corrected from "rows" to "row" */
   width: 100%;
-  height: 100%;
-
-  .profile-image {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      margin-right: 10px;
+  height: auto;
+  &__image-box {
+    flex: 1; /* Flex allows better control of image alignment */
+    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+    border-bottom:0.3px solid #d6d6d6;
   }
 
-  .profile-details {
-    width: 100%;
-      .profile-name {
-          font-size: 16px;
-          font-weight: bold;
-          margin: 0;
-      }
+  &__image {
+    width: 150px;
+    align-self: center;
+    height: 150px; /* Optional: Set height for consistency */
+    object-fit: cover; /* Ensure image maintains aspect ratio */
+    border-radius: 50%; /* Optional: Make it a circle if needed */
+  }
 
-      .profile-subtitle {
-          font-size: 14px;
-          color: #666;
-          margin: 0;
-      }
+  &__details {
+    flex: 2; 
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    padding-top: 1rem; /* Add space between image and details */
+    text-align: center; 
+    padding-left: 2rem;
+  }
 
-      .profile-short-text {
-          font-size: 12px;
-          color: #999;
-          margin: 0;
-      }
+  .profile-name {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .profile-subtitle {
+    font-size: 14px;
+    color: #666;
+    margin: 0;
+  }
+
+  .profile-short-text {
+    font-size: 12px;
+    color: #999;
+    margin: 0;
   }
 }
