--- a/src/components/availabilityview/DailyAppointments.scss
+++ b/src/components/availabilityview/DailyAppointments.scss
@@ -2,31 +2,40 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  h5{
+    align-self: flex-start;
+    padding-left: 2.6rem;
+  }
 }
 
 .time-slot-row {
   display: flex;
   gap: 10px;
+  flex-direction: column;
   margin-bottom: 10px;
 }
 
 .time-slot-button {
-  padding: 10px 20px;
+  padding: 10px 8vh;
   font-size: 14px;
-  border: none;
+  border: 2px solid #0056b3;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #007bff;
-  color: white;
+  background-color: white;
+  color: #0056b3;
   transition: background-color 0.3s;
+  font-weight: 800;
 }
 
 .time-slot-button:hover:not(:disabled) {
   background-color: #0056b3;
+  color: #fff;
 }
 
 .time-slot-button:disabled {
-  background-color: #cccccc;
+  background-color: #e7e7e7;
+  color: #666666;
+  border:1px solid #d6d6d6;
   cursor: not-allowed;
 }
 
@@ -53,30 +62,27 @@
 
   &__details {
     flex: 2; 
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
+    display: relative;
+    // flex-direction: column;
+    // justify-content: start;
+    // align-items: start;
     padding-top: 1rem; /* Add space between image and details */
-    text-align: center; 
+    text-align: start; 
     padding-left: 2rem;
+    font-weight: 800;
+    color: #a7a7a7;
   }
 
-  .profile-name {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
+  &__name {
+    display: absolute;
   }
-
-  .profile-subtitle {
-    font-size: 14px;
-    color: #666;
-    margin: 0;
+  &__service {
+    color: #000000;
+    display: block;
+    font-size: 25px;
+    font-family: sans-serif;
+    font-weight: 800;
   }
-
-  .profile-short-text {
-    font-size: 12px;
-    color: #999;
-    margin: 0;
-  }
+ 
+ 
 }
